Finish first testat

--- a/source/MonitoringClient/App.config
+++ b/source/MonitoringClient/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <MonitoringClient.Properties.Settings>
             <setting name="ConnectionString" serializeAs="String">
-                <value>Server=localhost;Database=inventarisierungsloesungv2;Uid=root;Pwd=halo1velo;</value>
+                <value />
             </setting>
         </MonitoringClient.Properties.Settings>
     </userSettings>
