--- a/source/MonitoringClient/Properties/Settings.settings
+++ b/source/MonitoringClient/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="ConnectionString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Server=localhost;Database=inventarisierungsloesungv2;Uid=root;Pwd=halo1velo;</Value>
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
