--- a/source/MonitoringClient/packages.config
+++ b/source/MonitoringClient/packages.config
@@ -4,6 +4,7 @@
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="DuplicateCheckerLib" version="1.0.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
+  <package id="linq2db" version="2.7.4" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.16" targetFramework="net472" />
   <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net472" />
