--- a/source/MonitoringClientTests/MonitoringClientTests.csproj
+++ b/source/MonitoringClientTests/MonitoringClientTests.csproj
@@ -37,6 +37,9 @@
     <Reference Include="DuplicateCheckerLib">
       <HintPath>C:\Users\Larissa\OneDrive\HF_Informatik_ZbW\06_Semester\ProgAdv\Projektarbeit\02-Testat-Equality_26-05-19\DuplicateCheckerLib\DuplicateCheckerLib.dll</HintPath>
     </Reference>
+    <Reference Include="linq2db, Version=2.7.4.0, Culture=neutral, PublicKeyToken=e41013125f9e410a, processorArchitecture=MSIL">
+      <HintPath>..\packages\linq2db.2.7.4\lib\net46\linq2db.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
