first version linq

--- a/source/MonitoringClient/App.config
+++ b/source/MonitoringClient/App.config
@@ -8,11 +8,6 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
-  <connectionStrings>
-    <add name="inventarisierungsloesunglfi"
-         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;"
-         providerName     = "MySql" />
-  </connectionStrings>
     <userSettings>
         <MonitoringClient.Properties.Settings>
             <setting name="ConnectionString" serializeAs="String">
@@ -28,4 +23,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <!--<connectionStrings>
+    <add name="inventarisierungsloesunglfi"
+         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;"
+         providerName     = "MySql" />
+  </connectionStrings>-->
 </configuration>
