--- a/source/MonitoringClinetDemo/App.config
+++ b/source/MonitoringClinetDemo/App.config
@@ -11,4 +11,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="inventarisierungsloesunglfi"
+         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;"
+         providerName     = "MySql" />
+  </connectionStrings>
 </configuration>
