FINAL-Version-LINQProject

--- a/source/MonitoringClientTests/app.config
+++ b/source/MonitoringClientTests/app.config
@@ -10,7 +10,7 @@
   </runtime>
   <connectionStrings>
     <add name="inventarisierungsloesunglfi"
-         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;"
+         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=;"
          providerName     = "MySql" />
   </connectionStrings>
 </configuration>
