--- a/source/MonitoringClinetDemo/App.config
+++ b/source/MonitoringClinetDemo/App.config
@@ -13,7 +13,7 @@
   </runtime>
   <connectionStrings>
     <add name="inventarisierungsloesunglfi"
-         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;"
+         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=;"
          providerName     = "MySql" />
   </connectionStrings>
 </configuration>
