--- a/source/MonitoringClient/MonitoringClient.csproj
+++ b/source/MonitoringClient/MonitoringClient.csproj
@@ -37,6 +37,24 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="BouncyCastle.Crypto, Version=1.8.3.0, Culture=neutral, PublicKeyToken=0e99375e54769942">
       <HintPath>..\packages\BouncyCastle.1.8.3.1\lib\BouncyCastle.Crypto.dll</HintPath>
@@ -92,19 +110,23 @@
     <Compile Include="Model\ILocation.cs" />
     <Compile Include="Model\Impl\Device.cs" />
     <Compile Include="Model\Impl\Location.cs" />
+    <Compile Include="Persistence\DbDtos\CustomerDto.cs" />
     <Compile Include="Persistence\DbDtos\DeviceDto.cs" />
     <Compile Include="Persistence\DbDtos\DtoBase.cs" />
     <Compile Include="Persistence\DbDtos\LocationDto.cs" />
     <Compile Include="Persistence\DbDtos\LogDto.cs" />
     <Compile Include="Persistence\DbDtos\ViewLogEntryDto.cs" />
+    <Compile Include="Persistence\Table\ICustomerRepository.cs" />
     <Compile Include="Persistence\Table\IDeviceRepository.cs" />
     <Compile Include="Persistence\Table\ILocationRepository.cs" />
     <Compile Include="Persistence\Table\ILogRepository.cs" />
+    <Compile Include="Persistence\Table\Impl\CustomerRepository.cs" />
     <Compile Include="Persistence\Table\Impl\DeviceRepository.cs" />
     <Compile Include="Persistence\Base\IRepositoryBase.cs" />
     <Compile Include="Persistence\Table\Impl\LocationRepository.cs" />
     <Compile Include="Persistence\Table\Impl\LogRepository.cs" />
     <Compile Include="Persistence\View\ILogEntryView.cs" />
+    <Compile Include="Utilities\Encryption.cs" />
     <Compile Include="ViewModel\CustomerDetailViewModel.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\LocationViewModel.cs" />
