--- a/source/MonitoringClientTests/packages.config
+++ b/source/MonitoringClientTests/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
-  <package id="linq2db" version="2.7.4" targetFramework="net472" />
-  <package id="MySql.Data" version="8.0.16" targetFramework="net472" />
-  <package id="NUnit" version="3.11.0" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.8.0" targetFramework="net472" />
+  <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net472" />
+  <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.17" targetFramework="net472" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
 </packages>
