--- a/source/MonitoringClientTests/MonitoringClientTests.csproj
+++ b/source/MonitoringClientTests/MonitoringClientTests.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Persistence\LogRepositoryIntegrationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\EncryptIntegrationTests.cs" />
+    <Compile Include="Validation\CustomerValidationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
