--- a/source/MonitoringClient/packages.config
+++ b/source/MonitoringClient/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.8.3.1" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="DuplicateCheckerLib" version="1.0.0" targetFramework="net472" />
-  <package id="Google.Protobuf" version="3.6.1" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.8.0" targetFramework="net472" />
   <package id="linq2db" version="2.7.4" targetFramework="net472" />
-  <package id="MySql.Data" version="8.0.16" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.17" targetFramework="net472" />
   <package id="Prism.Core" version="7.1.0.431" targetFramework="net472" />
   <package id="Prism.Wpf" version="7.1.0.431" targetFramework="net472" />
+  <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
 </packages>
