--- a/source/MonitoringClientTests/app.config
+++ b/source/MonitoringClientTests/app.config
@@ -13,8 +13,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="inventarisierungsloesunglfi"
-         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;"
-         providerName     = "MySql" />
+    <add name="inventarisierungsloesunglfi" connectionString="Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;" providerName="MySql" />
   </connectionStrings>
 </configuration>
