--- a/source/MonitoringClinetDemo/App.config
+++ b/source/MonitoringClinetDemo/App.config
@@ -9,11 +9,17 @@
         <assemblyIdentity name="System.Windows.Interactivity" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="BouncyCastle.Crypto" publicKeyToken="0e99375e54769942" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.8.5.0" newVersion="1.8.5.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Protobuf" publicKeyToken="a7d26565bac4d604" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.8.0.0" newVersion="3.8.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="inventarisierungsloesunglfi"
-         connectionString = "Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;"
-         providerName     = "MySql" />
+    <add name="inventarisierungsloesunglfi" connectionString="Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;" providerName="MySql" />
   </connectionStrings>
 </configuration>
