--- a/source/MonitoringClient/packages.config
+++ b/source/MonitoringClient/packages.config
@@ -3,6 +3,7 @@
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="CommonServiceLocator" version="2.0.4" targetFramework="net472" />
   <package id="DuplicateCheckerLib" version="1.0.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.8.0" targetFramework="net472" />
   <package id="linq2db" version="2.7.4" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.17" targetFramework="net472" />
