--- a/source/MonitoringClientTests/packages.config
+++ b/source/MonitoringClientTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Google.Protobuf" version="3.8.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="1.4.0" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="1.4.0" targetFramework="net472" />
