--- a/source/MonitoringClinetDemo/App.config
+++ b/source/MonitoringClinetDemo/App.config
@@ -1,8 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -20,6 +24,18 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="inventarisierungsloesunglfi" connectionString="Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=;" providerName="MySql" />
+    <add name="inventarisierungsloesunglfi" connectionString="Server=localhost;Database=inventarisierungsloesunglfi;Uid=root;pwd=halo1velo;" providerName="MySql" />
+    <add name="invEntities" connectionString="metadata=res://*/Persistence.Test.csdl|res://*/Persistence.Test.ssdl|res://*/Persistence.Test.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-ROGU9TJ\LAFI;initial catalog=inv;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="InvDb" connectionString="metadata=res://*/Persistence.EntityFramework.InventarisierungDb.csdl|res://*/Persistence.EntityFramework.InventarisierungDb.ssdl|res://*/Persistence.EntityFramework.InventarisierungDb.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-ROGU9TJ\LAFI;initial catalog=inv;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
